# docxtrc

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-check.yml
docextract/: __init__.py  cli.py  ingest.py  llm.py  pipeline.py  registry.py  schema.py  server.py  verify.py
docs/: live-check-results.md
examples/: sample_invoice.txt  specs.yaml
scripts/: live_check.py
tests/: test_extractor.py  test_live.py
