[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docextract"
version = "0.1.0"
description = "Registry-driven document extraction harness with swappable LLM backends and an MCP interface."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Real model backends (one optional extra per provider, lazily imported)
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
# File ingestion beyond plain text
files = ["pdfplumber>=0.11", "python-docx>=1.1", "pyyaml>=6.0"]
# Expose as an MCP server
mcp = ["mcp[cli]>=1.27,<2"]
# Everything, for development
dev = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "ollama>=0.4",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "mcp[cli]>=1.27,<2",
    "pytest>=8.0",
]

[project.scripts]
docextract = "docextract.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docextract*"]

[tool.pytest.ini_options]
# Put the repo root on sys.path and collect from tests/, so a bare
# `pytest` (not just `python -m pytest`) imports the `docextract` package.
pythonpath = ["."]
testpaths = ["tests"]
# `live` tests call real providers (need creds/network). Exclude them by default
# so the normal suite stays fully offline; opt in with `pytest -m live`.
markers = ["live: end-to-end test that calls a real LLM provider (opt-in; needs credentials)"]
addopts = "-m 'not live'"
